# compute-sandbox

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/core/: global.h  gpu.cpp  gpu.h  kernel.h  kernel_cpu.h  kernel_slang.h  meta.h  mtl.cpp  preprocessor.h  reflection.cpp  reflection.h
src/gpu/: adapter.h  gpu.cpp  gpu.h  kernel.h  kernel_cpu.h  kernel_metal.h  kernel_registry.h  kernel_slang.h
src/gpu/metal/: adapter_mtl.cpp  adapter_mtl.h  mtl.cpp  mtl.h
src/gpu/vulkan/: adapter_vk.cpp  adapter_vk.h  vk.cpp  vk.h
src/kernels/: add.h  add.metal  invert.h  invert.metal  invert2.h  invert2.metal  invert3.h  invert3.metal  invert3.slang
src/tests/: common.h  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp
src/tests/invert/: invert.h  invert.slang  test.cpp
tools/: slangc
